--- a/bioelektra/index-pre.html
+++ b/bioelektra/index-pre.html
@@ -50,7 +50,7 @@
 </div>
 
 <!--  content-->
-<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">де купити</a>
+<a class="fixed-link" href="https://liki24.com/search/?q=%D0%B1%D0%B8%D0%BE%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%B0">де купити</a>
 
 <div class="block-1">
     <div class="block-1__content">
@@ -155,7 +155,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43834&utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -168,7 +168,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43832&utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -199,7 +199,7 @@
                 <p>365 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43835&utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="">Інструкція</a>
             </div>
         </div>
@@ -210,7 +210,7 @@
                 <p>243 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43836&utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
