--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -50,7 +50,7 @@
 </div>
 
 <!--  content-->
-<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">де купити</a>
+<a class="fixed-link" href="https://liki24.com/search/?q=%D0%B1%D0%B8%D0%BE%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%B0">де купити</a>
 
 <div class="block-1 block-1_str">
     <div class="block-1__content">
@@ -102,7 +102,7 @@
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
             <div class="panel">
-                <p>Потреба в Магнії зростає при підвищених психічних і фізичних навантаженнях. Тому в періоди перенапруги особливо важливо підтримувати свій організм за допомогою достатнього споживання магнію.посилене виведення Магнію з організму нирками. Протистояти стресу можна за допомогою Магнію.
+                <p>Потреба в Магнії зростає при підвищених психічних і фізичних навантаженнях. Тому в періоди перенапруги особливо важливо підтримувати свій організм за допомогою достатнього споживання магнію.
                 </p>
             </div>
         </div>
@@ -150,7 +150,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43834&utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43832&utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 <p>365 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43835&utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="">Інструкція</a>
             </div>
         </div>
@@ -205,7 +205,7 @@
                 <p>243 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="https://liki24.com/checkout/?utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43836&utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
