--- a/trachisan/index.html
+++ b/trachisan/index.html
@@ -47,7 +47,7 @@
 
 <!--  content-->
 
-<div class="block-one">
+<!-- <div class="block-one">
     <div class="block-one__top-img">
       <div class="inner-top"></div>
       <p>Шопінг не дуже, коли горло болить</p>
@@ -57,7 +57,10 @@
       <p>Добре, що у нас є Tрахісан!</p>
     </div>
   <a name="t1"></a>
-</div>
+</div> -->
+<div class="block-six">
+    <iframe width="100%" height="515" src="https://www.youtube.com/embed/L5RFPM7EYZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 <div class="block-two">
   <div class="block-two__product"></div>
   <div class="block-two__text">
@@ -121,9 +124,6 @@
     <p>Краще надавати перевагу напіврідкій теплій їжі і  уникати гострих, твердих та сухих продуктів.</p>
   </div>
 </div>
-  <div class="block-six">
-    <iframe width="760" height="515" src="https://www.youtube.com/embed/L5RFPM7EYZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
 
 
 
