--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -232,7 +232,7 @@
         <li>Інструкції для медичного застосування Біолектра Магнезіум Фортіссімум, Форте и Дірект.</li>
         <li>https://www.biolectra-magnesium.de/</li>
     </ol>
-    <p>Ексклюзивний дистриб’ютор: ПрАТ “Натурфарм”, вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Реклама нелікарських засобів. Перед застосуванням уважно ознайомтеся з
+    <p>Ексклюзивний дистриб’ютор: ПрАТ “Натурфарм”, вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Реклама нелікарських засобів та лікарських засобів. Перед застосуванням уважно ознайомтеся з
         інструкцією та проконсультуйтесь з лікарем. Зберігати в недоступному для дітей місці. Біолектра Магнезіум Фортіссімум: РП № 13697/01/01 від 02.10.2019. Біолектра Магнезіум Форте: РП № 13955/01/01
         від 22.08.2019. Біолектра Магнезіум Дірект з лимонним/апельсиновим смаком – протокол випробувань харчової продукції №8/181 від 23.01.2018. Виробник Гермес Арцнайміттель GmbH (Німеччина).</p>
 </div>
