--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<!-- <a href="isla-ru/index.html">isla-ru</a> -->
 			<a href="influcid-EN/index.html">influcid-EN</a>
 			<a href="Alpikol-HR/index.html">Alpikol-HR</a>
+			<a href="gastritol-V2/index.html">gastritol-V2</a>
 		</section>
 	</main>
 
@@ -107,6 +108,9 @@
 	}
 	a:nth-child(16)::before {
 		background: url("./Alpikol/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(17)::before {
+		background: url("./gastritol-V2/bg.png")no-repeat center / cover;
 	}
 </style>
 
