--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -17,6 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+  <div class="alert-license">
+  <a href="license.html">
+    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
+  </a>
+  <button class="license-off"><p>Slažem se</p></button>
+</div>
 	<header class="App-header">
 
 
@@ -147,14 +153,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>КАК ПРИНИМАТЬ</h2>
-        <!-- <div class="change-box">
+        <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">Таблетки</p>
           </div>
           <div>
             <p class="p-btn2">Капли</p>
           </div>
-        </div> -->
+        </div>
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>В период острого заболевания</h3>
@@ -448,10 +454,10 @@
             <!--            </ol>-->
             <p>
               Официальный представитель в России:<br>
-ООО “Альпен Фарма”<br>
-117513, г. Москва, ул. Островитянова, д.6<br>
-Тел./факс: +7 (495) 609-65-72<br>
-www.alpenpharma.com info.russia@alpenpharma.com<br>
+ООО “Альпен Фарма”
+117513, г. Москва, ул. Островитянова, д.6
+Тел./факс: +7 (495) 609-65-72
+www.alpenpharma.com info.russia@alpenpharma.com
 ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ
 
 
