--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -113,9 +113,10 @@
             position: initial;
         }
         .pack {
-            height: 250px;
+            height: 290px;
             width: 170px;
             margin-left: 30px;
+            background-size: contain;
         }
         .shma {
             top: 221px;
