--- a/Klimaktoplan-kz/index.html
+++ b/Klimaktoplan-kz/index.html
@@ -8,37 +8,36 @@
     <link rel="shortcut icon" href="./images/fav.png" type="image/png" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script-kz.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
   <div class="navigation-logo">
-    <a  href="#top" class="logo logo-kz"></a>
+    <a  href="#top" class="logo"></a>
     
     <div class="navigation-top" role="navigation">
       <div id="menuToggle">
         <input type="checkbox" /> <span></span> <span></span> <span></span>
         <ul id="menu">
-          <li><a class="translated-text navmenu" key="g1" href="#k1">Өнім туралы</a></li>
-          <li><a class="translated-text navmenu" key="g2" href="#k2">Артықшылықтары</a></li>
-          <li><a class="translated-text navmenu" key="g4" href="#k4">Құрамы</a></li>
-          <!-- <li><a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a></li> -->
+          <li><a class="translated-text navmenu" key="g1" href="#k1">О продукте</a></li>
+          <li><a class="translated-text navmenu" key="g2" href="#k2">Преимущества</a></li>
+          <li><a class="translated-text navmenu" key="g4" href="#k4">Состав</a></li>
+          <!-- <li><a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a></li> -->
           <!-- <li><a class="translated-text navmenu" key="g4" href="faq.html">Вопросы</a></li> -->
-          <li><a class="translated-text buy-btn" key="g5" href="#k3">Қайдан сатып алуға болады?</a></li>
+          <li><a class="translated-text buy-btn" key="g5" href="#k3">Где купить?</a></li>
           <li>
-              <a class="lang lang-dop"><b>KZ</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
+              <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-kz.html"><p>  KZ</p></a>
           </li>
         </ul>
       </div>
     </div>
     <div class="desctop-navigation">
-      <a class="translated-text navmenu" key="g1" href="#k1">Өнім туралы</a>
-      <a class="translated-text navmenu" key="g2" href="#k2">Артықшылықтары</a>
-      <a class="translated-text navmenu" key="g4" href="#k4">Құрамы</a>
-      <!-- <a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a> -->
+      <a class="translated-text navmenu" key="g1" href="#k1">О продукте</a>
+      <a class="translated-text navmenu" key="g2" href="#k2">Преимущества</a>
+      <a class="translated-text navmenu" key="g4" href="#k4">Состав</a>
+      <!-- <a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a> -->
       <!-- <a class="translated-text navmenu faq" key="g4" href="faq.html"></a> -->
-      <a class="translated-text buy-btn" key="g5" href="#k3">Қайдан сатып алуға болады?</a>
-      <a class="lang lang-dop"><b>KZ</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
-
+      <a class="translated-text buy-btn" key="g5" href="#k3">Где купить?</a>
+      <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-kz.html"><p>  KZ</p></a>
     </div>
 <!--     <a class="instruction" href="./instruction.pdf"
     ><p class="translated-text" key="instruction"></p></a
@@ -49,9 +48,9 @@
 <a name="top"></a>
 <div class="header-container">
   <div class="header-container__left-block">
-    <div class="header-container__label header-container__label-kz"></div>
+    <div class="header-container__label"></div>
     <div class="header-container__pack-block">
-      <div class="pack-block pack-block-kz"></div>
+      <div class="pack-block"></div>
     </div>
   </div>
   <div class="header-container__new-woman header-container__new-woman-kz"></div>
@@ -64,7 +63,7 @@
 <div class="second-container" ><a name="k1"></a>
   <div class="second-container__text">
     <h1>Климактоплан Н</h1>
-    <p>КЛИМАКСТЫҢ НЕГІЗГІ КӨРСЕТКІШТЕРІН ЖЕҢІЛДЕТУ  ҮШІН</p>
+    <p>ДЛЯ ОБЛЕГЧЕНИЯ ОСНОВНЫХ ПРОЯВЛЕНИЙ КЛИМАКСА</p>
     <div class="mobile__pack">
       <div class="mobile__pack-box"></div>
     </div>
@@ -72,19 +71,19 @@
 <!--    <h4 class="second-container__color-text">БОЛЬШЕ 25 СИМПТОМОВ КЛИМАКСА</h4>-->
     <div class="second-container__block">
       <div class="second-container__psi">
-        <b>Психиялық-эмоционалдық </b>
-        <p>тітіркену</p>
-        <p>шаршау</p>
+        <b>Психоэмоциональных</b>
+        <p>раздражительность</p>
+        <p>утомляемость</p>
         <p>депрессия</p>
-        <p>ұйқының бұзылуы</p>
+        <p>нарушение сна</p>
       </div>
 
       <div class="second-container__vaz">
-        <b>Вазомоторлық</b>
-        <p>ыстықтау </p>
-        <p>терлеу</p>
-        <p>бас аурулары</p>
-        <p>бас айналу</p>
+        <b>Вазомоторных</b>
+        <p>приливы жара</p>
+        <p>потливость</p>
+        <p>головные боли</p>
+        <p>головокружение</p>
       </div>
     </div>
     <button>Купить в аптеке</button>
@@ -100,22 +99,23 @@
   <div class="third-container">
 
   <div class="third-container__plate-container">
-    <h3>Климактоплан Н көмегімен емдеудің артықшылықтары </h3>
+    <h3>Преимущества лечения с препаратом Климактоплан Н</h3>
     <div class="third-container__plate">
       <div class="plate-img"></div>
-      <p>Жақсы төзімділік<br>(сондықтан оны кем дегенде бір <br>жыл қабылдауға болады)<sup>1</sup></p>
+      <p>Хорошо переносится<br>(поэтому можно принимать <br>минимум год)<sup>1</sup></p>
     </div>
     <div class="third-container__plate">
       <div class="plate-img"></div>
-      <p>Қабылдаудың ыңғайлы схемасы<br>(таблеткалар күніне үш<br>рет қабылданады)</p>
+      <p>Удобная схема приема<br>(таблетки принимают три раза<br>в день)</p>
     </div>
     <div class="third-container__plate">
       <div class="plate-img"></div>
-      <p>Құрамында гормондар жоқ<br>(тек бірегей табиғи <br>ингредиенттер)</p>
+      <p>Не содержит гормонов<br>(только уникальные натуральные <br>компоненты)</p>
     </div>
     <div class="third-container__plate">
       <div class="plate-img"></div>
-      <p>тәуелділікті тудырмайды<br>(ұзақ уақыт қабылдауға болады)</p>
+      <p>Не вызывает  привыкания<br>(может приниматься длительное
+        время)</p>
     </div>
   </div>
 <!--  <button>Узнать</button>-->
@@ -126,9 +126,9 @@
 <div class="fourth-container">
   <div class="fourth-container__active">
     <div class="fourth-container__text">
-      <h2>БЕЛСЕНДІ ИНГРЕДИЕНТТЕР </h2>
+      <h2>Активные ингредиенты</h2>
       <h3 class="chosen-ingredient">Сангвинария</h3>
-      <p class="chosen-ingredient-content">Әйелдің эмоционалды көңіл-күйіне әсер етеді. Тітіркенуді жояды, қан қысымын қалыпқа келтіреді, жүрек ырғағының бұзылуын және жүрек соғысы ұстамаларын болдырмауға көмектеседі. Сондай-ақ, бас ауруы, жағымсыз эмоциялар мен ұйқының бұзылуын жояды. </p>
+      <p class="chosen-ingredient-content">Влияет на эмоциональное состояние женщины. Устраняет раздражительность, нормализует артериальное давление, помогает предотвращать аритмичные нарушения сердца и нападения сердцебиения. Также устраняет боль в голове, негативные эмоции и нарушения сна.</p>
       <div class="carousel-dots-container">
         <div class="carousel-dots ingredient1 ingredient-dot1"></div>
         <div class="carousel-dots ingredient2 ingredient-dot2"></div>
@@ -150,7 +150,7 @@
 <div><a name="k3"></a></div>
 
  
-  <h3 class="fifth-h3">Сіз Климактоплан Н  препаратын өзіңіздің қалаңыздағы дәріханаларда немесе интернет-дәріханаларда сатып ала аласыз:</h3>
+  <h3 class="fifth-h3">Вы можете приобрести препарат Климактоплан Н в аптеках Вашего города или в интернет - аптеках:</h3>
 <div class="fifth-container">
   <a class="logo1" href="https://europharma.kz/klimaktoplan-n-no-100-tabl"></a>
   <a class="logo2" href="http://www.sadykhan.kz/search/index/?query=%D0%9A%D0%BB%D0%B8%D0%BC%D0%B0%D0%BA%D1%82%D0%BE%D0%BF%D0%BB%D0%B0%D0%BD%20%E2%84%96100%20%D1%82%D0%B0%D0%B1%D0%BB."></a>
@@ -159,31 +159,28 @@
 
 
   <div class="disclamer">
-    <p>1.Стрижова Н.В., Нестерова О.А., 
-
-Гормоналды және кешенді гормоналды емес дәрілермен климактериялық синдромды емдеу тиімділігінің салыстырмалы сипаттамасы. Акушер-гинекологтар қауымдастығының Ресей хабаршысы, 2000ж., №2, 50-54 беттер. 
+    <p>1.Стрижова Н.В., Нестерова О.А., Сравнительная характеристика эффективности лечения климактерического синдрома гормональными и комплексными негормональными препаратами. Российский вестник ассоциации акушеров-гинекологов,2000 г., №2, стр.50-54
     </p>
-    <p>2.Овсянников Т.В. Климактерия аспектілерінің бірі ретінде жасқа байланысты терінің өзгеруі. Нені қарсы қойып салыстыру керек? Status Praesens,2018 ж.,№4, 49 бет. </p>
+    <p>2.Овсянников Т.В. Возрастные изменения кожи как один из аспектов климактерия. Что противопоставить? Status Praesens,2018 г.,№4, стр.49</p>
   </div>
   <div class="logos-container">
     <a  class="disclamer__logo" href=""></a>
     <p class="official">
-      Эксклюзивті өкіл: Қазақстан Республикасы аумағында тұтынушылардан өнім (тауар) сапасы туралы шағымдарды қабылдайтын ұйымның мекен-жайы: <br>
-«Альпен Фарма» ЖШС <br>
-Қазақстан Республикасы, Алматы облысы, <br>
-Қарасай ауданы, Елтай ауылдық округі, Көкүзек ауылы, 1044 ғимарат <br>
-Тел. / Факс +7 (727) 226 53 06, 226 98 33, +7 (727) 226 53 66 <br>
-E-mail: info.kazakhstan@alpenpharma.com <br>
-      ҚОЛДАНУҒА БОЛМАЙТЫН ЖАҒДАЙЛАРЫ БАР. ПАЙДАЛАНУ АЛДЫНДА НҰСҚАУЛЫҚТЫ ОҚЫҢЫЗ <br>
-Препарат Қазақстан Республикасында тіркелген және қолдануға рұқсат етілген.  Лиценз. 06.06.2007 ж. № ФД 64605036 P <br>
-Тіркеу куәлігінің нөмірі: 
-РК-ЛС-5№018903 <br>
-Тіркеу күні: 21.08.2017 ж. 
+      Эксклюзивный представитель: Адрес организации, принимающей на территории Республики Казахстан претензии от потребителей по качеству продукции (товара):<br>
+ТОО «Альпен Фарма»<br>
+Республика Казахстан, Алматинская область,<br>
+Карасайский район, Ельтайский сельский округ, с.Кокузек, строение 1044<br>
+Тел./факс +7 (727) 226 53 06, 226 98 33, +7 (727) 226 53 66<br>
+E-mail: info.kazakhstan@alpenpharma.com<br>
+      ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ<br>
+Препарат зарегистрирован и разрешен к применению в Республике Казахстан лиценз. № ФД 64605036 P от 06.09.2007 г.<br>
+Номер регистрационного удостоверения: РК-ЛС-5№018903<br>
+Дата регистрации: 21.08.2017
     </p>
     <a  class="disclamer__alpen" href="http://alpenpharma.com"></a>
   </div>
 <!--   <div class="disclamer-warning">
-    <p>ӨЗІН-ӨЗІ ЕМДЕУ ДЕНСАУЛЫҒЫҢЫЗҒА ҚАУІПТІ БОЛУЫ МҮМКІН </p>
+    <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ВРЕДНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
   </div> -->
 
 
